  do_justify()
	- Remove redundant key checks. (DLR)
  do_spell()
	- Clarify the error message when creating a temporary file
	  fails. (DLR)
- winio.c:
  parse_kbinput()
	- If we get NANO_CONTROL_8, properly handle it in all cases.
	  (DLR)
  get_control_kbinput()
	- Add Ctrl-/ as an alias for Ctrl-_. (DLR, found by Benno
	  Schulenberg)
	- Simplify the if blocks wherever possible. (DLR)
- configure.ac:
	- Remove old warnings about color support. (DLR)
- doc/faq.html:
	- Add a new section 4.4, and move all section 4 entries after it
	  down one number, to explain how to deal with problems typing
	  Meta-[. (DLR)
	- Add a new section 4.5, and move all section 4 entries after it
	  down one number, to explain a problem that can occur when
	  holding down keys to generate Meta sequences. (Benno
	  Schulenberg, minor tweaks by DLR)
	- Add a few capitalization and wording fixes. (DLR)
- doc/nano.1, doc/nanorc.5, doc/rnano.1, doc/nano.texi:
	- Update the copyright years to include 2006. (DLR)
	- Explicitly mention that all regexes should be extended regular
	  expressions. (DLR, suggested by John M. Gabriele)
	- Miscellaneous minor fixes. (DLR)
	- Add various wording fixes. (Benno Schulenberg and DLR)
- doc/nanorc.5:
	- Mention that the nanorc file should not be in DOS or Mac
	  format. (DLR)
	- Add various wording fixes. (DLR)
- doc/rnano.1:
	- Add various wording fixes. (Benno Schulenberg and DLR)
	- Add description of the +LINE[,COLUMN] option. (DLR)
- doc/nano.texi:
	- Change license to GPL, in order to match the rest of the
	  documentation, and because the current license is incompatible
	  with everything else in any case. (DLR)
	- Mention that backup files and spell checking are disabled in
	  restricted mode, as rnano.1 does. (DLR)
	- Add minor updates to put some text back in sync with nano's
	  help text, and with nano's current feature set. (DLR)
	- Add a "Nanorc Files" section to explain the nanorc file format
	  in detail, using text from nanorc.5. (DLR)